# carb

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt  requrements.txt
.cache/clangd/index/: main.cpp.AF3417C232B6204A.idx  scout.hpp.3664CD420B09193B.idx  socket.cpp.DBA9046D59B1C5BA.idx  socket.hpp.603315F98F0A01F0.idx
analysis/: book_compare.ipynb  coinbase_speed.py  kraken_dl.py  krakendl2.py  lag_anal.ipynb  listennojudge_anal.ipynb  logbids.py  measure_latency.py  parse.py  pl_listennojudge.ipynb  polars.ipynb  test.csv  wavg_signal_ffilled.csv
lib/Botan/include/botan-3/botan/: build.h
lib/Botan/lib/: libbotan-3.dylib
lib/Botan/lib/cmake/Botan-3.6.1/: botan-config.cmake
lib/Botan/lib/pkgconfig/: botan-3.pc
src/common/: coinbase_socket.cpp  coinbase_socket.hpp  kraken_socket.cpp  kraken_socket.hpp  socket.cpp  socket.hpp
src/common/coinbase/: data.hpp
src/common/sockets/: socket.cpp  socket.hpp
src/common/sockets/coinbase_socket/: coinbase_socket.cpp  coinbase_socket.hpp
src/common/sockets/kraken_socket/: kraken_socket.cpp  kraken_socket.hpp
src/common/utils/: auth.h  data.h  time.h
src/engine/: logic.hpp  main.cpp  price_buf.cpp  price_buf.hpp
src/scout/: listener.hpp  main.cpp  scout.cpp  scout.hpp  test.cpp
test/: CMakeLists.txt  echoweb.py  test_price_buf.cpp
